--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.1",
     "@hookform/resolvers": "^4.1.2",
+    "@onesignal/node-onesignal": "^2.0.1-beta1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -59,6 +60,7 @@
     "recharts": "^2.15.1",
     "replicate": "^0.25.1",
     "sonner": "^1.3.1",
+    "svix": "^1.18.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
