--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm install --legacy-peer-deps babel-plugin-module-resolver && npm run build",
+  "buildCommand": "npm install --legacy-peer-deps svix @onesignal/node-onesignal && npm run build",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps",
   "env": {
