fix vercel deploy

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
-  "presets": ["next/babel"],
+  "presets": [
+    "next/babel",
+    "@babel/preset-env",
+    ["@babel/preset-react", { "runtime": "automatic" }],
+    "@babel/preset-typescript"
+  ],
   "plugins": [
     [
       "module-resolver",
