--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,3 @@
 {
-  "presets": [
-    "next/babel",
-    "@babel/preset-env",
-    ["@babel/preset-react", { "runtime": "automatic" }],
-    "@babel/preset-typescript"
-  ],
-  "plugins": [
-    [
-      "module-resolver",
-      {
-        "root": ["./"],
-        "alias": {
-          "@": "./"
-        }
-      }
-    ]
-  ]
+  "presets": ["next/babel"]
 } 
