--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
     "NODE_OPTIONS": "--max-old-space-size=4096",
     "NEXT_TELEMETRY_DISABLED": "1",
     "SKIP_TYPE_CHECK": "true",
-    "NEXT_SKIP_TYPE_CHECK": "true"
+    "NEXT_SKIP_TYPE_CHECK": "true",
+    "NEXT_DISABLE_SOURCEMAPS": "true"
   },
   "outputDirectory": ".next"
 } 
