--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
     "NEXT_TELEMETRY_DISABLED": "1",
     "SKIP_TYPE_CHECK": "true",
     "NEXT_SKIP_TYPE_CHECK": "true",
-    "NEXT_DISABLE_SOURCEMAPS": "true"
+    "NEXT_DISABLE_SOURCEMAPS": "true",
+    "NEXT_DISABLE_SWC": "1"
   },
   "outputDirectory": ".next"
 } 
