--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "build:vercel": "node build-vercel.js",
+    "build:js": "NODE_OPTIONS=--max_old_space_size=4096 NEXT_DISABLE_SWC=1 next build --no-lint",
     "start": "next start",
     "lint": "next lint",
     "install-types": "npm install --save-dev typescript @types/react @types/react-dom @types/node"
@@ -79,6 +80,7 @@
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "glob": "^7.1.7",
     "typescript": "^5.7.3"
   }
 }
