--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "build:vercel": "node build-vercel.js",
     "build:js": "NODE_OPTIONS=--max_old_space_size=4096 NEXT_DISABLE_SWC=1 next build --no-lint",
-    "vercel-build": "node vercel-build.js",
+    "vercel-build": "node build-vercel.js",
     "start": "next start",
     "lint": "next lint",
     "install-types": "npm install --save-dev typescript @types/react @types/react-dom @types/node"
