--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
-legacy-peer-deps=true 
+legacy-peer-deps=true
+ignore-workspace-root-check=true
+strict-peer-dependencies=false
+auto-install-peers=false
+engine-strict=false 
