--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build:vercel",
+  "buildCommand": "bash ./vercel-build-override.sh",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps",
   "env": {
