fix vercel deploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "npm run build:vercel",
+  "buildCommand": "node vercel-build.js",
   "framework": "nextjs",
-  "installCommand": "npm install --legacy-peer-deps glob",
+  "installCommand": "npm install --legacy-peer-deps",
   "env": {
     "NODE_OPTIONS": "--max-old-space-size=4096",
     "NEXT_TELEMETRY_DISABLED": "1",
