--- a/.npmrc
+++ b/.npmrc
@@ -2,4 +2,5 @@ legacy-peer-deps=true
 ignore-workspace-root-check=true
 strict-peer-dependencies=false
 auto-install-peers=false
-engine-strict=false 
+engine-strict=false
+save-exact=true 
