--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "node vercel-build.js",
+  "buildCommand": "node .vercel/build.js",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps",
   "env": {
