fix vercel deploy

--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,5 @@ ignore-workspace-root-check=true
 strict-peer-dependencies=false
 auto-install-peers=false
 engine-strict=false
-save-exact=true 
+save-exact=true
+omit=dev 
