--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,9 @@
     "NEXT_SKIP_TYPE_CHECK": "true",
     "NEXT_DISABLE_SOURCEMAPS": "true",
     "NEXT_DISABLE_SWC": "1",
-    "TYPESCRIPT_IGNORE_BUILD_ERRORS": "true"
+    "TYPESCRIPT_IGNORE_BUILD_ERRORS": "true",
+    "NEXT_PUBLIC_SUPABASE_URL": "https://placeholder-value-replace-in-vercel.supabase.co",
+    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "placeholder-value-replace-in-vercel"
   },
   "outputDirectory": ".next"
 } 
