--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,19 @@
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps",
   "buildCommand": "node vercel-build-override.js",
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.pokemon-fusion.com"
+        }
+      ],
+      "destination": "https://pokemon-fusion.com/$1",
+      "permanent": true
+    }
+  ],
   "env": {
     "NODE_OPTIONS": "--max-old-space-size=4096",
     "NEXT_TELEMETRY_DISABLED": "1",
