--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,13 +35,13 @@
   "include": [
     "**/*.js",
     "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx",
     "dummy.ts",
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules",
-    "**/*.ts",
-    "**/*.tsx"
+    "node_modules"
   ]
 }
