--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.302.0",
     "next": "^15.2.0",
     "next-themes": "^0.2.1",
+    "node-fetch": "^2.7.0",
     "postcss": "^8.4.35",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
