--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "recharts": "^2.15.1",
     "replicate": "^0.25.2",
     "sonner": "^1.3.1",
+    "stripe": "^17.7.0",
     "svix": "^1.18.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.17",
