--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^6.12.1",
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.2",
     "@onesignal/node-onesignal": "^2.0.1-beta1",
     "@radix-ui/react-accordion": "^1.2.3",
