--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,17 @@
   },
   "outputDirectory": ".next",
   "redirects": [
-    { "source": "https://pokemon-fusion.com/:path*", "destination": "https://www.pokemon-fusion.com/:path*", "permanent": true },
-    { "source": "http://pokemon-fusion.com/:path*", "destination": "https://www.pokemon-fusion.com/:path*", "permanent": true }
+    { 
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "pokemon-fusion.com"
+        }
+      ],
+      "destination": "https://www.pokemon-fusion.com/:path*",
+      "permanent": true
+    }
   ],
   "rewrites": [
     { "source": "/static-test", "destination": "/static-test" },
