--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
+    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
@@ -51,6 +52,7 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
+    "form-data": "^4.0.2",
     "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
     "input-otp": "^1.4.2",
