--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "install-types": "npm install --save-dev typescript @types/react @types/react-dom @types/node"
+    "install-types": "npm install --save-dev typescript @types/react @types/react-dom @types/node",
+    "test:gpt-vision": "node tests/test-gpt-vision-enhancement.js",
+    "test:gpt-direct": "node tests/test-gpt-vision-enhancement-direct.js"
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.1.6",
@@ -70,6 +72,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "replicate": "^0.25.2",
+    "sharp": "^0.34.1",
     "sonner": "^1.3.1",
     "stripe": "^17.7.0",
     "svix": "^1.18.0",
