--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "path": "/api/notifications/cron",
       "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/rewards/monthly-cron",
+      "schedule": "0 0 1 * *"
     }
   ],
   "redirects": [
